--- a/V2.3/compteAff.ui
+++ b/V2.3/compteAff.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>compteAff</class>
+ <widget class="QMainWindow" name="compteAff">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,50 +17,50 @@
    <widget class="QListView" name="liste">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>70</y>
-      <width>158</width>
-      <height>219</height>
+      <x>280</x>
+      <y>110</y>
+      <width>171</width>
+      <height>181</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="nomCompte">
-    <property name="geometry">
-     <rect>
-      <x>400</x>
-      <y>50</y>
-      <width>59</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
     </property>
    </widget>
    <widget class="QPushButton" name="addPart">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>460</x>
       <y>260</y>
       <width>113</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Add Part</string>
+     <string>Add Participant</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="addDep">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>460</x>
       <y>230</y>
       <width>113</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Add Depense</string>
+     <string>Add dépense</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="nomCompte">
+    <property name="geometry">
+     <rect>
+      <x>278</x>
+      <y>90</y>
+      <width>171</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
