--- a/V2.3/accueilutilisateur.ui
+++ b/V2.3/accueilutilisateur.ui
@@ -14,29 +14,11 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="Prenom">
+   <widget class="QLabel" name="NomPrenom">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>261</width>
-      <height>171</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>23</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="Nom">
-    <property name="geometry">
-     <rect>
-      <x>340</x>
-      <y>0</y>
       <width>261</width>
       <height>171</height>
      </rect>
@@ -67,7 +49,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
