--- a/V2.3/accueilutilisateur.ui
+++ b/V2.3/accueilutilisateur.ui
@@ -19,8 +19,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>261</width>
-      <height>171</height>
+      <width>471</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="font">
@@ -30,6 +30,9 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
    </widget>
    <widget class="QListView" name="listCompte">
