--- a/V2.4/inscription.ui
+++ b/V2.4/inscription.ui
@@ -24,18 +24,15 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="17" column="1">
-      <widget class="QPushButton" name="boutton_Compte">
+     <item row="11" column="1">
+      <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Créer Compte</string>
+        <string>Mdp :</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="QLineEdit" name="lineEdit_eMail"/>
-     </item>
-     <item row="0" column="1">
-      <spacer name="verticalSpacer_2">
+     <item row="19" column="1">
+      <spacer name="verticalSpacer_3">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
@@ -45,26 +42,42 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>40</height>
+         <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
-     <item row="10" column="1">
-      <widget class="QLineEdit" name="lineEdit_Pseudo">
-       <property name="echoMode">
-        <enum>QLineEdit::Normal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="11" column="1">
-      <widget class="QLabel" name="label_4">
+     <item row="6" column="1">
+      <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Mdp :</string>
+        <string>eMail :</string>
        </property>
       </widget>
      </item>
-     <item row="13" column="1">
+     <item row="1" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Nom :</string>
+       </property>
+      </widget>
+     </item>
+     <item row="15" column="1">
+      <spacer name="verticalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Minimum</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>80</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="14" column="1">
       <widget class="QGroupBox" name="mailValide">
        <property name="enabled">
         <bool>true</bool>
@@ -81,7 +94,7 @@
        <widget class="QRadioButton" name="buttonmailvalide">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>30</x>
           <y>10</y>
           <width>84</width>
           <height>19</height>
@@ -94,7 +107,7 @@
        <widget class="QRadioButton" name="buttonmailInvalide">
         <property name="geometry">
          <rect>
-          <x>150</x>
+          <x>270</x>
           <y>10</y>
           <width>111</width>
           <height>19</height>
@@ -106,78 +119,24 @@
        </widget>
       </widget>
      </item>
-     <item row="18" column="1">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="19" column="1">
-      <widget class="QPushButton" name="retourAccueil">
-       <property name="text">
-        <string>Accueil</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="lineEdit_Nom"/>
      </item>
-     <item row="2" column="2">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label">
+     <item row="18" column="1">
+      <widget class="QPushButton" name="boutton_Compte">
        <property name="text">
-        <string>Nom :</string>
+        <string>Créer Compte</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>eMail :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="1">
-      <widget class="QLineEdit" name="lineEdit_Mdp">
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="lineEdit_Prenom">
        <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+        <enum>QLineEdit::Normal</enum>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Prenom :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="20" column="1">
+     <item row="21" column="1">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -193,10 +152,75 @@
        </property>
       </spacer>
      </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEdit_Prenom">
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="lineEdit_eMail"/>
+     </item>
+     <item row="2" column="0">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>200</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="10" column="1">
+      <widget class="QLineEdit" name="lineEdit_Pseudo">
        <property name="echoMode">
         <enum>QLineEdit::Normal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>200</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="12" column="1">
+      <widget class="QLineEdit" name="lineEdit_Mdp">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Maximum</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="20" column="1">
+      <widget class="QPushButton" name="retourAccueil">
+       <property name="text">
+        <string>Accueil</string>
        </property>
       </widget>
      </item>
@@ -204,6 +228,13 @@
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Pseudo :</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLabel" name="label_5">
+       <property name="text">
+        <string>Prenom :</string>
        </property>
       </widget>
      </item>
