--- a/V2.4/inscription.ui
+++ b/V2.4/inscription.ui
@@ -24,40 +24,17 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="11" column="1">
-      <widget class="QLabel" name="label_4">
+     <item row="3" column="1">
+      <widget class="QLabel" name="label_5">
        <property name="text">
-        <string>Mdp :</string>
+        <string>Prenom :</string>
        </property>
       </widget>
      </item>
-     <item row="19" column="1">
-      <spacer name="verticalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Minimum</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="6" column="1">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>eMail :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Nom :</string>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="lineEdit_Prenom">
+       <property name="echoMode">
+        <enum>QLineEdit::Normal</enum>
        </property>
       </widget>
      </item>
@@ -77,64 +54,24 @@
        </property>
       </spacer>
      </item>
-     <item row="14" column="1">
-      <widget class="QGroupBox" name="mailValide">
-       <property name="enabled">
-        <bool>true</bool>
+     <item row="2" column="2">
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
-       <property name="autoFillBackground">
-        <bool>false</bool>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
        </property>
-       <property name="title">
-        <string/>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>200</width>
+         <height>20</height>
+        </size>
        </property>
-       <property name="flat">
-        <bool>false</bool>
-       </property>
-       <widget class="QRadioButton" name="buttonmailvalide">
-        <property name="geometry">
-         <rect>
-          <x>30</x>
-          <y>10</y>
-          <width>84</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>eMailvalidé</string>
-        </property>
-       </widget>
-       <widget class="QRadioButton" name="buttonmailInvalide">
-        <property name="geometry">
-         <rect>
-          <x>270</x>
-          <y>10</y>
-          <width>111</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>eMailNonvalidé</string>
-        </property>
-       </widget>
-      </widget>
+      </spacer>
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="lineEdit_Nom"/>
-     </item>
-     <item row="18" column="1">
-      <widget class="QPushButton" name="boutton_Compte">
-       <property name="text">
-        <string>Créer Compte</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEdit_Prenom">
-       <property name="echoMode">
-        <enum>QLineEdit::Normal</enum>
-       </property>
-      </widget>
      </item>
      <item row="21" column="1">
       <spacer name="verticalSpacer">
@@ -152,9 +89,6 @@
        </property>
       </spacer>
      </item>
-     <item row="7" column="1">
-      <widget class="QLineEdit" name="lineEdit_eMail"/>
-     </item>
      <item row="2" column="0">
       <spacer name="horizontalSpacer">
        <property name="orientation">
@@ -171,35 +105,61 @@
        </property>
       </spacer>
      </item>
-     <item row="10" column="1">
-      <widget class="QLineEdit" name="lineEdit_Pseudo">
-       <property name="echoMode">
-        <enum>QLineEdit::Normal</enum>
+     <item row="8" column="1">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Pseudo :</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
-      <spacer name="horizontalSpacer_2">
+     <item row="19" column="1">
+      <spacer name="verticalSpacer_3">
        <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+        <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
-        <enum>QSizePolicy::Preferred</enum>
+        <enum>QSizePolicy::Minimum</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>200</width>
+         <width>20</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
-     <item row="12" column="1">
-      <widget class="QLineEdit" name="lineEdit_Mdp">
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
+     <item row="1" column="1">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Nom :</string>
        </property>
       </widget>
+     </item>
+     <item row="14" column="0">
+      <spacer name="verticalSpacer_5">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="14" column="2">
+      <spacer name="verticalSpacer_6">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
      <item row="0" column="1">
       <spacer name="verticalSpacer_2">
@@ -224,18 +184,90 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>Pseudo :</string>
+     <item row="12" column="1">
+      <widget class="QLineEdit" name="lineEdit_Mdp">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="label_5">
+     <item row="11" column="1">
+      <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Prenom :</string>
+        <string>Mdp :</string>
        </property>
+      </widget>
+     </item>
+     <item row="18" column="1">
+      <widget class="QPushButton" name="boutton_Compte">
+       <property name="text">
+        <string>Créer Compte</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <widget class="QLineEdit" name="lineEdit_Pseudo">
+       <property name="echoMode">
+        <enum>QLineEdit::Normal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="lineEdit_eMail"/>
+     </item>
+     <item row="6" column="1">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>eMail :</string>
+       </property>
+      </widget>
+     </item>
+     <item row="14" column="1">
+      <widget class="QGroupBox" name="mailValide">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="title">
+        <string/>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+       <widget class="QRadioButton" name="buttonmailvalide">
+        <property name="geometry">
+         <rect>
+          <x>63</x>
+          <y>10</y>
+          <width>121</width>
+          <height>91</height>
+         </rect>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string>eMailvalidé</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="buttonmailInvalide">
+        <property name="geometry">
+         <rect>
+          <x>250</x>
+          <y>10</y>
+          <width>131</width>
+          <height>91</height>
+         </rect>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string>eMailNonvalidé</string>
+        </property>
+       </widget>
       </widget>
      </item>
     </layout>
